@@ -42,6 +42,20 @@ dependencies {
 
     // Apache Commons Text
     implementation 'org.apache.commons:commons-text:1.10.0'
+
+    // Jsoup
+    implementation 'org.jsoup:jsoup:1.14.3'
+
+    // Selenium WebDriver dependencies
+    implementation 'org.seleniumhq.selenium:selenium-java:4.8.0'
+
+    // Logging
+    implementation 'org.slf4j:slf4j-api:2.0.9'
+    implementation 'ch.qos.logback:logback-classic:1.4.11'
+
+    // Mockito (testing)
+    testImplementation 'org.mockito:mockito-core:4.0.0'
+    testImplementation 'org.mockito:mockito-inline:4.0.0'
 }
 
 test {
@@ -57,5 +71,13 @@ test {
         showCauses true
         showStackTraces true
     }
+    
+    // Ajout des arguments JVM pour résoudre les avertissements et problèmes spécifiques
+    jvmArgs += [
+        '-Xshare:off',
+        '--add-opens=java.base/java.lang=ALL-UNNAMED',
+        '-javaagent:' + configurations.testRuntimeClasspath.find { it.name.contains("byte-buddy-agent") }
+    ]
+
     useJUnitPlatform()
 }
